--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -7,6 +7,7 @@
     --headerColor: #1a1a1a;
     --bodyTextColor: #4e4b66;
     --bodyTextColorWhite: #fafbfc;
+    --offWhite: #fdfdfd;
 }
 
 body {
