--- a/styles/test.css
+++ b/styles/test.css
@@ -24,16 +24,63 @@ table
 
 }
 
+.long {
+    margin: auto;
+    width: 70%;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    z-index: 1000;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    max-height: 500px; /* Set maximum height for the dropdown */
+    overflow-y: auto; /* Enable vertical scrollbar */
+    border: 1px solid #ddd;
+    z-index: 1;
+}
+
+.dropdown-content select {
+    width: 100%;
+    border: none;
+}
+
+.dropdown-content select option {
+    padding: 5px;
+}
+
+.dropdown-content select option:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 form {
     width: 49.5%;
     border-radius: 8px;
     padding: 15px;
-    background-color: #fdfdfd;
+    background-color: var(--offWhite);
+
 }
 
 body{
     background-color: var(--secondaryLightest);
     color: var(--headerColor);
+}
+
+.wave {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 14rem;
 }
 
 .select2-container .select2-selection--single .select2-selection__rendered {
