Fix notes table, move the elements around to fit better

--- a/styles/test.css
+++ b/styles/test.css
@@ -71,8 +71,13 @@ form {
 
 }
 
-#student_plan {
-    height: 200%;
+#notes {
+    width: 100%;
+    display: flex;
+}
+
+#notes table tr td {
+    word-break: break-all;
 }
 
 body{
